--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/jondum/ractive-tooltip",
   "devDependencies": {
+    "css-loader": "^0.23.1",
     "style-loader": "^0.11.0",
     "stylus-loader": "^1.1.0",
     "webpack": "^1.8.5"
